# MediaChallenger

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mediachallenger/: AudioPlayerEqualizerTest.kt  ExampleInstrumentedTest.kt  NativeEqualizerTestJUnit5.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/mediachallenger/: IMessageService.aidl
app/src/main/java/com/example/mediachallenger/: AidlServiceManager.kt  AudioManager.kt  AudioService.java  AudioSettingManager.kt  BottomSheetTrackList.kt  MainActivity.kt  MessageService.java  SelectedMusicSingleton.kt  TrackListAdapter.kt
app/src/main/java/com/example/mediachallenger/equalization/: EqualizationInterface.java  EqualizationModule.java
app/src/main/java/com/example/mediachallenger/notification/: NotificationInterface.java  NotificationModule.java
app/src/main/java/com/example/mediachallenger/playback/: PlaybackInterface.java  PlaybackModule.java
app/src/main/java/com/example/mediachallenger/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  equalizer.cpp
app/src/main/res/layout/: activity_main.xml  adapter_track_list.xml  track_list_bottom_sheet.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mediachallenger/: AudioServiceTest.kt  ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
